adicionando todo esqueleto do projeto

--- a/index.html
+++ b/index.html
@@ -1,1 +1,227 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <title>Dream Hotel</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <header class="cabecalho">
+
+        <div class="container">
+            <span class="cabecalho__menu-hotel header__imagem"></span>
+
+            <ul class="lista-menu">
+                <li class="lista-menu__titulo">Categorias</li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">item 1</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">item 2</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">item 3</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">item 4</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">item 5</a>
+                </li>
+            </ul>
+            <a href="#"><img src="img/" alt="Logo" class="header__imagem"></a>
+        </div>
+
+        <div>
+            <a href="#"><img src="img/Favoritos.svg" alt="favoritos" class="header__imagem"></a>
+
+            <a href="#"><img src="img/Compras.svg" alt="sacolinha" class="header__imagem"></a>
+
+            <a href="#"><img src="img/Usuario.svg" alt="perfil" class="header__imagem"></a>
+        </div>
+
+    </header>
+
+
+    <main>
+        <section class="banner">
+            <h2 class="banner__titulo">Já sabe para onde quer ir?</h2>
+            <p class="banner__paragrafo">Encontre em nosso quarto o que você precisa para sua noite!</p>
+            <input type="text" class="banner__input" placeholder="Qual será seu proximo lugar?">
+        </section>
+
+        <section class="carrosel">
+            <h2 class="carrosel__titulo">prah</h2>
+
+            <div class="swiper">
+
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
+
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                  <!-- Slides -->
+                  <div class="swiper-slide"><img src="img/a.jpg" alt=""></div>
+                  <div class="swiper-slide"><img src="img/b.jpg" alt=""></div>
+                  <div class="swiper-slide"><img src="img/c.jpg" alt=""></div>
+                  <div class="swiper-slide"><img src="img/d.jpg" alt=""></div>
+                  <div class="swiper-slide"><img src="img/e.jpg" alt=""></div>
+                </div>
+
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+              </div>
+
+
+        </section>
+
+        <section class="card">
+            <!-- linha 1 -->
+            <div class="card__descricao">
+                <!-- coluna 1 -->
+                <div class="descricao">
+                    <h3 class="descricao__titulo-terciario">Talvez você também possa ter interesse por...</h3>
+                    <h2 class="descricao__titulo-principal">Passagens aérias</h2>
+                    <p class="descricao__paragrafo">Viajar para os lugares mais bonitos e visitados no mundo.</p>
+                </div>
+                <!-- coluna 2 -->
+                <img src="img/viagem-aviao-cut.jpg" alt="viagem de avião" class="img__descricao">
+            </div>
+
+            <!-- linha 2 -->
+            <div class="card__botoes">
+                <!-- coluna 1 -->
+                <div class="botoes">
+                    <a href="#"><img src="img/Favoritos.svg" alt="favoritos" class="botoes__item"></a>
+                    <a href="#"><img src="img/Compras.svg" alt="sacolinha" class="botoes__item"></a>
+                </div>
+                <!-- coluna 2 -->
+                <a href="#" class="card__link">Saiba mais</a>
+            </div>
+
+        </div>
+            
+        </section>
+
+
+        <section  class="carrosel">
+            <h2 class="carrosel__titulo">prah</h2>
+
+            <div class="swiper">
+
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
+
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                  <!-- Slides -->
+                  <div class="swiper-slide"><img src="img/a.jpg" alt=""></div>
+                  <div class="swiper-slide"><img src="img/b.jpg" alt=""></div>
+                  <div class="swiper-slide"><img src="img/c.jpg" alt=""></div>
+                  <div class="swiper-slide"><img src="img/d.jpg" alt=""></div>
+                  <div class="swiper-slide"><img src="img/e.jpg" alt=""></div>
+                </div>
+
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+              </div>
+        </section>
+
+
+        <section class="card">
+            <!-- linha 1 -->
+            <div class="card__descricao">
+                <!-- coluna 1 -->
+                <div class="descricao">
+                    <ul class="card__estrelas">
+                        <li><img src="img/Star 1.svg" alt="estrela"></li>
+                        <li><img src="img/Star 1.svg" alt="estrela"></li>
+                        <li><img src="img/Star 1.svg" alt="estrela"></li>
+                        <li><img src="img/Star 1.svg" alt="estrela"></li>
+                        <li><img src="img/Star 1.svg" alt="estrela"></li>
+                    </ul>
+                    <h3 class="descricao__titulo-terciario">Viagem do ano</h3>
+                    <h2 class="descricao__titulo-secundario">Svalbard - Noruega</h2>
+                    <p class="descricao__paragrafo-secundario">Vai uma Aurora Boreal?<br> Frio + Belezas = <span class="material-symbols-outlined">
+                        favorite
+                        </span></p>
+                </div>
+                <!-- coluna 2 -->
+                <img src="img/aurora.jpg" alt="viagem de avião" class="img__descricao-secundario">
+            </div>
+            
+            <!-- linha 2 -->
+            <div class="card__botoes">
+                <!-- coluna 1 -->
+                <div class="botoes">
+                    <a href="#"><img src="img/Favoritos.svg" alt="favoritos" class="botoes__item"></a>
+                    <a href="#"><img src="img/Compras.svg" alt="sacolinha" class="botoes__item"></a>
+                </div>
+                <!-- coluna 2 -->
+                <a href="#" class="card__link">Saiba mais</a>
+            </div>
+        </section>
+
+
+        <section class="topicos">
+            <h2 class="topicos__titulo">Tópicos visitados recentemente</h2>
+            <ul class="lista-topicos">
+                <li class="topicos__item">
+                    <a href="#" class="topico__link">Hotéis</a>
+                </li>
+                <li class="topicos__item">
+                    <a href="#" class="topico__link">Passagens</a>
+                </li>
+                <li class="topicos__item">
+                    <a href="#" class="topico__link">Custos</a>
+                </li>
+                <li class="topicos__item">
+                    <a href="#" class="topico__link">Lugares</a>
+                </li>
+                <li class="topicos__item">
+                    <a href="#" class="topico__link">SP</a>
+                </li>
+                <li class="topicos__item">
+                    <a href="#" class="topico__link">+ Baratos</a>
+                </li>
+                <li class="topicos__item">
+                    <a href="#" class="topico__link">RJ</a>
+                </li>
+                <li class="topicos__item">
+                    <a href="#" class="topico__link">Acessibilidade</a>
+                </li>
+            </ul>
+        </section>
+
+        <section class="contato">
+            <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+            <p class="contato__texto">Atualizações de hotéis, novas viagens, promoções e outros.</p>
+            <input type="text" class="contato__email" placeholder="Cadastre seu e-mail">
+        </section>
+
+
+
+    </main>
+
+    <footer class="rodape">
+        <h2 class="rodape__titulo">Grupo Dream</h2>
+    </footer>
+
+
+
+    <footer></footer>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script src="js/header.js"></script>
+</body>
+</html>
