organizando a sintaxe do código

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Dream Hotel</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
+    <link rel="icon" href="img/logo.png">
 
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="style.css">
@@ -16,10 +17,8 @@
 
 <body>
     <header class="cabecalho">
-
         <div class="container">
             <span class="cabecalho__menu-hotel header__imagem"></span>
-
             <ul class="lista-menu">
                 <li class="lista-menu__titulo">Categorias</li>
                 <li class="lista-menu__item">
@@ -38,17 +37,14 @@
                     <a href="#" class="lista-menu__link">item 5</a>
                 </li>
             </ul>
-            <a href="#"><img src="img/" alt="Logo" class="header__imagem"></a>
+            <a href="#"><img src="img/logo.png" alt="Logo" class="header__imagem-logo"></a>
         </div>
 
         <div>
             <a href="#"><img src="img/Favoritos.svg" alt="favoritos" class="header__imagem"></a>
-
             <a href="#"><img src="img/Compras.svg" alt="sacolinha" class="header__imagem"></a>
-
             <a href="#"><img src="img/Usuario.svg" alt="perfil" class="header__imagem"></a>
         </div>
-
     </header>
 
 
@@ -60,7 +56,7 @@
         </section>
 
         <section class="carrosel">
-            <h2 class="carrosel__titulo">prah</h2>
+            <h2 class="carrosel__titulo">Melhores Promoções</h2>
 
             <div class="swiper">
 
@@ -80,45 +76,37 @@
                 <!-- If we need navigation buttons -->
                 <div class="swiper-button-prev"></div>
                 <div class="swiper-button-next"></div>
-              </div>
-
-
-        </section>
-
-        <section class="card">
-            <!-- linha 1 -->
-            <div class="card__descricao">
-                <!-- coluna 1 -->
-                <div class="descricao">
-                    <h3 class="descricao__titulo-terciario">Talvez você também possa ter interesse por...</h3>
-                    <h2 class="descricao__titulo-principal">Passagens aérias</h2>
-                    <p class="descricao__paragrafo">Viajar para os lugares mais bonitos e visitados no mundo.</p>
-                </div>
-                <!-- coluna 2 -->
-                <img src="img/viagem-aviao-cut.jpg" alt="viagem de avião" class="img__descricao">
             </div>
 
-            <!-- linha 2 -->
-            <div class="card__botoes">
-                <!-- coluna 1 -->
-                <div class="botoes">
-                    <a href="#"><img src="img/Favoritos.svg" alt="favoritos" class="botoes__item"></a>
-                    <a href="#"><img src="img/Compras.svg" alt="sacolinha" class="botoes__item"></a>
+            <div class="card">
+                <!-- linha 1 -->
+                <div class="card__descricao">
+                    <!-- coluna 1 -->
+                    <div class="descricao">
+                        <h3 class="descricao__titulo-terciario">Talvez você também possa ter interesse por...</h3>
+                        <h2 class="descricao__titulo-principal">Passagens aérias</h2>
+                        <p class="descricao__paragrafo">Viajar para os lugares mais bonitos e visitados no mundo.</p>
+                    </div>
+                    <!-- coluna 2 -->
+                    <img src="img/viagem-aviao-cut.jpg" alt="viagem de avião" class="img__descricao">
                 </div>
-                <!-- coluna 2 -->
-                <a href="#" class="card__link">Saiba mais</a>
+
+                <!-- linha 2 -->
+                <div class="card__botoes">
+                    <!-- coluna 1 -->
+                    <div class="botoes">
+                        <a href="#"><img src="img/Favoritos.svg" alt="favoritos" class="botoes__item"></a>
+                        <a href="#"><img src="img/Compras.svg" alt="sacolinha" class="botoes__item"></a>
+                    </div>
+                    <!-- coluna 2 -->
+                    <a href="#" class="card__link">Saiba mais</a>
+                </div>
             </div>
-
-        </div>
-            
         </section>
-
 
         <section  class="carrosel">
-            <h2 class="carrosel__titulo">prah</h2>
-
+            <h2 class="carrosel__titulo">Mais Visitados</h2>
             <div class="swiper">
-
                 <!-- If we need pagination -->
                 <div class="swiper-pagination"></div>
 
@@ -135,44 +123,41 @@
                 <!-- If we need navigation buttons -->
                 <div class="swiper-button-prev"></div>
                 <div class="swiper-button-next"></div>
-              </div>
-        </section>
-
-
-        <section class="card">
-            <!-- linha 1 -->
-            <div class="card__descricao">
-                <!-- coluna 1 -->
-                <div class="descricao">
-                    <ul class="card__estrelas">
-                        <li><img src="img/Star 1.svg" alt="estrela"></li>
-                        <li><img src="img/Star 1.svg" alt="estrela"></li>
-                        <li><img src="img/Star 1.svg" alt="estrela"></li>
-                        <li><img src="img/Star 1.svg" alt="estrela"></li>
-                        <li><img src="img/Star 1.svg" alt="estrela"></li>
-                    </ul>
-                    <h3 class="descricao__titulo-terciario">Viagem do ano</h3>
-                    <h2 class="descricao__titulo-secundario">Svalbard - Noruega</h2>
-                    <p class="descricao__paragrafo-secundario">Vai uma Aurora Boreal?<br> Frio + Belezas = <span class="material-symbols-outlined">
-                        favorite
+            </div>
+            <div class="card">
+                <!-- linha 1 -->
+                <div class="card__descricao">
+                    <!-- coluna 1 -->
+                    <div class="descricao">
+                        <ul class="card__estrelas">
+                            <li><img src="img/Star 1.svg" alt="estrela"></li>
+                            <li><img src="img/Star 1.svg" alt="estrela"></li>
+                            <li><img src="img/Star 1.svg" alt="estrela"></li>
+                            <li><img src="img/Star 1.svg" alt="estrela"></li>
+                            <li><img src="img/Star 1.svg" alt="estrela"></li>
+                        </ul>
+                        <h3 class="descricao__titulo-terciario">Viagem do ano</h3>
+                        <h2 class="descricao__titulo-secundario">Svalbard - Noruega</h2>
+                        <p class="descricao__paragrafo-secundario">Vai uma Aurora Boreal?<br> Frio + Belezas = <span class="material-symbols-outlined">
+                            favorite
                         </span></p>
+                    </div>
+
+                    <!-- coluna 2 -->
+                    <img src="img/aurora.jpg" alt="viagem de avião" class="img__descricao-secundario">
                 </div>
-                <!-- coluna 2 -->
-                <img src="img/aurora.jpg" alt="viagem de avião" class="img__descricao-secundario">
-            </div>
-            
-            <!-- linha 2 -->
-            <div class="card__botoes">
-                <!-- coluna 1 -->
-                <div class="botoes">
-                    <a href="#"><img src="img/Favoritos.svg" alt="favoritos" class="botoes__item"></a>
-                    <a href="#"><img src="img/Compras.svg" alt="sacolinha" class="botoes__item"></a>
+                <!-- linha 2 -->
+                <div class="card__botoes">
+                    <!-- coluna 1 -->
+                    <div class="botoes">
+                        <a href="#"><img src="img/Favoritos.svg" alt="favoritos" class="botoes__item"></a>
+                        <a href="#"><img src="img/Compras.svg" alt="sacolinha" class="botoes__item"></a>
+                    </div>
+                    <!-- coluna 2 -->
+                    <a href="#" class="card__link">Saiba mais</a>
                 </div>
-                <!-- coluna 2 -->
-                <a href="#" class="card__link">Saiba mais</a>
             </div>
         </section>
-
 
         <section class="topicos">
             <h2 class="topicos__titulo">Tópicos visitados recentemente</h2>
@@ -209,18 +194,11 @@
             <p class="contato__texto">Atualizações de hotéis, novas viagens, promoções e outros.</p>
             <input type="text" class="contato__email" placeholder="Cadastre seu e-mail">
         </section>
-
-
-
     </main>
-
     <footer class="rodape">
         <h2 class="rodape__titulo">Grupo Dream</h2>
     </footer>
 
-
-
-    <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="js/header.js"></script>
 </body>
