trocando imagens no index

--- a/index.html
+++ b/index.html
@@ -66,11 +66,12 @@
                 <!-- Additional required wrapper -->
                 <div class="swiper-wrapper">
                   <!-- Slides -->
-                  <div class="swiper-slide"><img src="img/a.jpg" alt=""></div>
-                  <div class="swiper-slide"><img src="img/b.jpg" alt=""></div>
-                  <div class="swiper-slide"><img src="img/c.jpg" alt=""></div>
-                  <div class="swiper-slide"><img src="img/d.jpg" alt=""></div>
-                  <div class="swiper-slide"><img src="img/e.jpg" alt=""></div>
+                  <div class="swiper-slide"><img src="img/quarto_1.jpg" alt=""></div>
+                  <div class="swiper-slide"><img src="img/quarto_2.jpg" alt=""></div>
+                  <div class="swiper-slide"><img src="img/quarto_3.jpg" alt=""></div>
+                  <div class="swiper-slide"><img src="img/quarto_4.jpg" alt=""></div>
+                  <div class="swiper-slide"><img src="img/quarto_5.jpg" alt=""></div>
+                  <div class="swiper-slide"><img src="img/quarto_6.png" alt=""></div>
                 </div>
 
                 <!-- If we need navigation buttons -->
@@ -113,11 +114,14 @@
                 <!-- Additional required wrapper -->
                 <div class="swiper-wrapper">
                   <!-- Slides -->
-                  <div class="swiper-slide"><img src="img/a.jpg" alt=""></div>
-                  <div class="swiper-slide"><img src="img/b.jpg" alt=""></div>
-                  <div class="swiper-slide"><img src="img/c.jpg" alt=""></div>
-                  <div class="swiper-slide"><img src="img/d.jpg" alt=""></div>
-                  <div class="swiper-slide"><img src="img/e.jpg" alt=""></div>
+                  <div class="swiper-slide"><img src="img/quarto_10.png" alt=""></div>
+                  <div class="swiper-slide"><img src="img/quarto_11.jpg" alt=""></div>
+                  <div class="swiper-slide"><img src="img/quarto_12.jpg" alt=""></div>
+                  <div class="swiper-slide"><img src="img/quarto_13.jpg" alt=""></div>
+                  <div class="swiper-slide"><img src="img/quarto_14.jpg" alt=""></div>
+                  <div class="swiper-slide"><img src="img/quarto_15.jpg" alt=""></div>
+                  <div class="swiper-slide"><img src="img/quarto_16.png" alt=""></div>
+                  <div class="swiper-slide"><img src="img/quarto_17.jpg" alt=""></div>
                 </div>
 
                 <!-- If we need navigation buttons -->
