adicionando link ao javascript do carrosel

--- a/index.html
+++ b/index.html
@@ -205,5 +205,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="js/header.js"></script>
+    <script src="js/carrosel.js"></script>
 </body>
 </html>
