--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
             <ul class="lista-menu">
                 <li class="lista-menu__titulo">Categorias</li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">item 1</a>
+                    <a href="#" class="lista-menu__link">Hóteis</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">item 2</a>
+                    <a href="#" class="lista-menu__link">Passagens</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">item 3</a>
+                    <a href="#" class="lista-menu__link">Reservas</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">item 4</a>
+                    <a href="#" class="lista-menu__link">Minha carteira</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">item 5</a>
+                    <a href="#" class="lista-menu__link">Configurações</a>
                 </li>
             </ul>
             <a href="#"><img src="img/logo.png" alt="Logo" class="header__imagem-logo"></a>
